--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "open": "^10.0.3",
     "pino-pretty": "^10.3.1",
     "qrcode-terminal": "^0.12.0",
-    "redis": "^4.6.12"
+    "redis": "^4.6.12",
+    "tsconfig-paths": "^4.2.0"
   }
 }
