feat: add bearer auth

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 PORT=3000
 
 REDIS_URL=redis://localhost:6379
+
+# Generate a key using: 'date | sha256sum | base64 | head -c 60; echo'
+JWT_SECRET_KEY=
