--- a/package.json
+++ b/package.json
@@ -1,35 +1,23 @@
 {
-  "name": "wpp-rest-api",
-  "version": "1.0.0",
-  "description": "A REST api for send/receive message from WhatsApp",
-  "main": "app.js",
+  "name": "wpp",
+  "private": true,
   "scripts": {
-    "build": "tsc",
-    "start": "node build/server.js",
-    "start-dev": "ts-node-dev --respawn --transpile-only src/server.ts"
+    "build": "turbo build",
+    "dev": "turbo dev",
+    "lint": "turbo lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
-  "author": "Henrique",
-  "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.2.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "prettier": "^3.2.5",
+    "turbo": "^2.3.3",
+    "typescript": "5.5.4"
   },
-  "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.0",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "open": "^10.0.3",
-    "pino-pretty": "^10.3.1",
-    "qrcode-terminal": "^0.12.0",
-    "redis": "^4.6.12"
-  }
+  "engines": {
+    "node": ">=18"
+  },
+  "packageManager": "yarn@1.22.18",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ]
 }
