--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@heroui/table": "^2.2.8",
     "@repo/ui": "*",
     "axios": "^1.7.9",
     "next": "^15.1.0",
